usbredir-0.7   16 October 2013
------------------------------
-usbredirproto:
 -the usb_redir_ep_info_header has been extended with a max_streams field,
  this is only send / received if both sides have usb_redir_cap_bulk_streams
-usbredirparser:
 -fix a bug causing parsing breakage when receiving a hello packet with 64 bit
  id capabiliy and another packet in succession so that they both got parsed
  in one usbredirparser_do_read call
-usbredirhost:
 -use libusb_set_auto_detach_kernel_driver when available
-usbredirserver:
 -listen to both ipv4 and ipv6 addresses on ipv6 capable systems

usbredir-0.6   13 December 2012
-------------------------------
-usbredirproto:
 -add support for bulk packets with 32 bits length
 -add support for buffered bulk input
-usbredirparser:
 -add support for bulk packets with 32 bits length
 -add support for buffered bulk input
-usbredirhost:
 -add support for bulk packets with 32 bits length
 -queue multiple transfers for interrupt receiving
 -add support for buffered bulk input
 -only apply mult to max-packet-size for isoc high speed endpoints
 -add a do-not-reset device blacklist, populate it with 1210:001c

usbredir-0.5.3  7 October 2012
------------------------------
-usbredirparser:
 -add support for bulk packets longer then 65535 bytes
-usbredirhost:
 -add support for bulk packets longer then 65535 bytes

usbredir-0.5.2 25 September 2012
--------------------------------
-usbredirparser:
 -rename libusbredirparser.pc to libusbredirparser-0.5.pc
  This should really have been done with the 0.5 release as API
  compatibility with previous releases was broken there!

usbredir-0.5.1 19 September 2012
--------------------------------
-usbredirparser:
 -usbredirparser_has_data_to_write now returns the write queue depth, instead
  of only 0 or 1
-usbredirhost:
 -usbredirhost_has_data_to_write now returns the write queue depth, instead
  of only 0 or 1
 -when the write queue gets too large, drop isochronous input packets
